--- a/res/values-in-rID/cr_strings.xml
+++ b/res/values-in-rID/cr_strings.xml
@@ -920,8 +920,8 @@
     <string name="qs_tile_layout_summary">Tampilkan label di bawah ikon alih-alih di sebelah ikon</string>
     <string name="qs_columns_portrait_title">Kolom (potret)</string>
     <string name="qs_columns_landscape_title">Kolom (lanskap)</string>
-    <string name="qqs_rows_portrait_title">Quick QS Rows (portrait)</string>
-    <string name="qqs_rows_landscape_title">Quick QS Rows (landscape)</string>
+    <string name="qqs_rows_portrait_title">Baris Setelan Cepat (potret)</string>
+    <string name="qqs_rows_landscape_title">Baris Setelan Cepat (lanskap)</string>
     <!-- Statusbar Clock background chip -->
     <string name="statusbar_clock_chip_title">Latar belakang keping</string>
     <string name="statusbar_clock_chip_summary">Tampilkan kepingan beraksen di belakang jam</string>
@@ -1067,6 +1067,25 @@
     <string name="radio_info_title">Info radio</string>
     <!-- QS Header -->
     <string name="qs_header_image_title">Gambar Header</string>
+    <string name="qs_header_image_summary">Pilih gambar header latar belakang Setelan Cepat</string>
+    <string name="qs_header_image_enabled_title">Kustomisasi gambar header Setelan Cepat</string>
+    <string name="qs_header_image_enabled_summary">Aktifkan kustomisasi gambar header Setelan Cepat</string>
+    <string name="qs_header_image_landscape_enabled_title">Tampilkan pada lanskap</string>
+    <string name="qs_header_image_landscape_enabled_summary">Display QS header image in landscape mode</string>
+    <string name="qs_header_image_tint_title">Warna</string>
+    <string name="qs_header_image_tint_none">Tanpa warna</string>
+    <string name="qs_header_image_tint_accent">Warna aksen</string>
+    <string name="qs_header_image_tint_primary">Warna utama</string>
+    <string name="qs_header_image_tint_primary_inverse">Kebalikan warna primer</string>
+    <string name="qs_header_image_tint_custom">Warna kustom</string>
+    <string name="qs_header_image_tint_custom_title">Warna kustom</string>
+    <string name="qs_header_image_height_portrait_title">Tinggi (potret)</string>
+    <string name="qs_header_image_height_landscape_title">Tinggi (lanskap)</string>
+    <string name="qs_header_image_alpha_title">Opasitas</string>
+    <string name="qs_header_image_padding_side_title">Lapisan samping</string>
+    <string name="qs_header_image_padding_top_title">Lapisan atas</string>
+    <string name="file_header_select_title">Pilih gambar lokal</string>
+    <string name="file_header_select_summary">Pilih gambar dari penyimpanan</string>
     <!-- Lockscreen Clock -->
     <string name="kg_custom_clock_top_margin_title">Posisi jam garis ganda</string>
     <string name="kg_small_clock_text_size_title">Ukuran jam kecil</string>
@@ -1074,10 +1093,11 @@
     <!-- Island Notification -->
     <string name="island_notification_title">Notifikasi Island</string>
     <string name="island_notification_summary">Tampilkan pemberitahuan pendahuluan dalam gaya Island Dinamis</string>
+    <string name="island_notification_now_playing_title">Sedang Diputar</string>
+    <string name="island_notification_now_playing_summary">Display currently playing song in Dynamic Island style</string>
     <string name="island_notification_footer_text">Fitur notifikasi Island, yang terinspirasi dari Dynamic Island iOS, mengubah notifikasi pendahuluan Android menjadi utilitas notifikasi ringkas dan akses cepat.\n\nKontrol Akses Cepat Island mencakup fitur berikut:\n1. Ketuk notifikasi island untuk menjawab panggilan telepon dengan cepat.\n2. Tekan lama notifikasi island untuk menolak panggilan telepon.\n3. Tekan lama notifikasi island untuk memperluas pratinjau notifikasi island.    </string>
     <!-- QS Dual Tone Colors -->
     <string name="qs_dual_tone_title">Dual tone themed</string>
     <string name="qs_dual_tone_summary">Use dual tone background colors instead of AOSP single tone</string>
     <!-- Label for a numbered SIM card.  [CHAR LIMIT=40] -->
-    <string name="sim_card_number_title">SIM <xliff:g id="card_number">%1$d</xliff:g></string>
 </resources>
