--- a/res/values-iw-rIL/cr_strings.xml
+++ b/res/values-iw-rIL/cr_strings.xml
@@ -1078,6 +1078,25 @@
     <string name="radio_info_title">מידע הרדיו</string>
     <!-- QS Header -->
     <string name="qs_header_image_title">תמונת כותרת</string>
+    <string name="qs_header_image_summary">בחירת תמונת הרקע של כותרת ההגדרות המהירות</string>
+    <string name="qs_header_image_enabled_title">התאמת תמונת כותרת ההגדרות המהירות</string>
+    <string name="qs_header_image_enabled_summary">הפעלת התאמת תמונת הרקע של כותרת ההגדרות המהירות</string>
+    <string name="qs_header_image_landscape_enabled_title">הצגה במצב אופקי (נוף)</string>
+    <string name="qs_header_image_landscape_enabled_summary">הצגת תמונת הרקע להגדרו המהירות כאשר המכשיר מוצב אופקית</string>
+    <string name="qs_header_image_tint_title">גוון</string>
+    <string name="qs_header_image_tint_none">ללא גוון</string>
+    <string name="qs_header_image_tint_accent">צבע ההדגשה</string>
+    <string name="qs_header_image_tint_primary">צבע יסוד</string>
+    <string name="qs_header_image_tint_primary_inverse">היפוך צבע היסוד</string>
+    <string name="qs_header_image_tint_custom">צבע מותאם אישית</string>
+    <string name="qs_header_image_tint_custom_title">צבע גוון מותאם אישית</string>
+    <string name="qs_header_image_height_portrait_title">גובה (במצב אנכי - דיוקן)</string>
+    <string name="qs_header_image_height_landscape_title">גובה (במצב רוחבי - נוף)</string>
+    <string name="qs_header_image_alpha_title">אטימות</string>
+    <string name="qs_header_image_padding_side_title">מרווח הדפנות</string>
+    <string name="qs_header_image_padding_top_title">מרווח עליון</string>
+    <string name="file_header_select_title">בחירת תמונה שבמכשירך</string>
+    <string name="file_header_select_summary">בחירת תמונה מהאחסון</string>
     <!-- Lockscreen Clock -->
     <string name="kg_custom_clock_top_margin_title">מיקום של השעון המפוצל</string>
     <string name="kg_small_clock_text_size_title">גודל השעון הקטן</string>
@@ -1091,5 +1110,4 @@
     <string name="qs_dual_tone_title">Dual tone themed</string>
     <string name="qs_dual_tone_summary">Use dual tone background colors instead of AOSP single tone</string>
     <!-- Label for a numbered SIM card.  [CHAR LIMIT=40] -->
-    <string name="sim_card_number_title">SIM <xliff:g id="card_number">%1$d</xliff:g></string>
 </resources>
