--- a/res/values-pl-rPL/cr_strings.xml
+++ b/res/values-pl-rPL/cr_strings.xml
@@ -160,7 +160,7 @@
     <string name="hardware_keys_action_screenshot">Zrób zrzut ekranu</string>
     <string name="hardware_keys_action_volume_panel">Włącz panel głośności</string>
     <string name="hardware_keys_action_clear_all_notifications">Wyczyść wszystkie powiadomienia</string>
-    <string name="hardware_keys_action_notifications_panel">Przełącznik panelu powiadomień</string>
+    <string name="hardware_keys_action_notifications_panel">Pokaż panel powiadomień</string>
     <string name="hardware_keys_action_expand_qs_panel">Rozwiń panel szybkich ustawień</string>
     <string name="hardware_keys_action_ringer_modes">Zmień tryb dzwonka</string>
     <string name="home_answer_call_title">Odbieranie połączeń</string>
@@ -302,7 +302,7 @@
     <string name="status_bar_quick_qs_pulldown_always">Zawsze pokazuj szybkie ustawienia podczas rozwijania paska stanu</string>
     <!-- Status bar - Smart pulldown-->
     <string name="smart_pulldown_title">Inteligentne rozwijanie</string>
-    <string name="smart_pulldown_summary">Otwórz szybkie ustawienia, gdy jest %1$s powiadomień</string>
+    <string name="smart_pulldown_summary">Otwórz szybkie ustawienia, gdy ilość powiadomień wynosi: %1$s</string>
     <string name="smart_pulldown_none_summary">Otwórz szybkie ustawienia, w przypadku braku powiadomień</string>
     <string name="smart_pulldown_off">Wyłącz</string>
     <string name="smart_pulldown_none">brak powiadomień</string>
@@ -416,8 +416,8 @@
     <string name="qs_date_summary">Wyświetlaj datę w nagłówku paska stanu</string>
     <!-- QS battery -->
     <string name="qs_battery_location_title">Lokalizacja baterii</string>
-    <string name="qs_battery_location_qs_panel">Panel Szybkich Ustawień</string>
-    <string name="qs_battery_location_qs_statusbar">Panel Szybkich Ustawień</string>
+    <string name="qs_battery_location_qs_panel">Panel szybkich ustawień</string>
+    <string name="qs_battery_location_qs_statusbar">Pasek stanu szybkich ustawień</string>
     <string name="qs_use_status_bar_battery_style">Taki jak styl paska stanu</string>
     <!-- Battery estimate -->
     <string name="battery_estimate_title">Szacunkowy czas pracy baterii</string>
@@ -428,7 +428,7 @@
     <string name="network_traffic_location_title">Umiejscowienie</string>
     <string name="network_traffic_location_disable">Wyłączono</string>
     <string name="network_traffic_location_statusbar">Pasek stanu</string>
-    <string name="network_traffic_location_quick_statusbar">Ukryj pasek stanu</string>
+    <string name="network_traffic_location_quick_statusbar">Pasek stanu szybkich ustawień</string>
     <string name="network_traffic_mode_title">Tryb wyświetlania</string>
     <string name="network_traffic_mode_up">Tylko wysyłanie</string>
     <string name="network_traffic_mode_down">Tylko pobieranie</string>
@@ -448,7 +448,7 @@
     <string name="network_traffic_hidearrow">Ukryj strzałki</string>
     <string name="network_traffic_hidearrow_summary">Ukryj strzałki wskaźnika ruchu</string>
     <!-- QS footer warnings -->
-    <string name="qs_footer_warnings_title">Alerty stopki</string>
+    <string name="qs_footer_warnings_title">Alerty w stopce</string>
     <string name="qs_footer_warnings_summary">Wyświetlaj ostrzeżenie na dole panelu szybkich ustawień, gdy sieć jest monitorowana przez zewnętrzne aplikacje lub VPN</string>
     <!-- Media art -->
     <string name="media_art_title">Okładka albumu</string>
@@ -811,33 +811,33 @@
     <string name="screen_off_udfps_title">Czytnik zawsze włączony</string>
     <string name="screen_off_udfps_summary">Czytnik pod ekranem pozostanie włączony po wyłączeniu ekranu</string>
     <!-- Columbus -->
-    <string name="columbus_gesture_detected">Wykryto Szybkie stuknięcie!</string>
+    <string name="columbus_gesture_detected">Wykryto Szybkie Dotknięcie!</string>
     <string name="columbus_gesture_enrollment_complete">Gotowe</string>
     <string name="columbus_gesture_enrollment_do_it_later">Nie teraz</string>
     <string name="columbus_gesture_enrollment_settings">Otwórz Ustawienia</string>
     <string name="columbus_gesture_enrollment_try_it">Wypróbuj</string>
     <string name="columbus_gesture_training_action_no_selection_error">Wybierz akcję do wykonania</string>
-    <string name="columbus_gesture_training_action_text">Wybierz, co ma się stać po użyciu Szybkiego stuknięcia. Możesz to później zmienić w ustawieniach.</string>
-    <string name="columbus_gesture_training_action_title">Wybierz opcję Szybkiego stuknięcia</string>
+    <string name="columbus_gesture_training_action_text">Wybierz, co ma się stać po użyciu Szybkiego Dotknięcia. Możesz to później zmienić w ustawieniach.</string>
+    <string name="columbus_gesture_training_action_title">Wybierz opcję Szybkiego Dotknięcia</string>
     <string name="columbus_gesture_training_enrolling_first_gesture">… Wykryto 1 z 2 Szybkich stuknięć</string>
     <string name="columbus_gesture_training_enrolling_first_gesture_text">Spróbujmy jeszcze raz. Szybko stuknij dwukrotnie o tył swojego telefonu.</string>
     <string name="columbus_gesture_training_enrolling_first_gesture_title">Świetnie!</string>
     <string name="columbus_gesture_training_enrolling_second_gesture">… Wykryto 2 z 2 Szybkich stuknięć</string>
-    <string name="columbus_gesture_training_enrolling_second_gesture_text">Możesz już używać Szybkiego stuknięcia</string>
+    <string name="columbus_gesture_training_enrolling_second_gesture_text">Możesz już używać Szybkiego Dotknięcia</string>
     <string name="columbus_gesture_training_enrolling_second_gesture_title">Dobra robota!</string>
     <string name="columbus_gesture_training_enrolling_text">Szybko stuknij dwukrotnie o tył swojego telefonu.</string>
-    <string name="columbus_gesture_training_enrolling_title">Wypróbuj</string>
-    <string name="columbus_gesture_training_finished_text">Aby zmienić siłę naciśnięcia potrzebną do użycia Szybkiego stuknięcia, przejdź do Ustawień.</string>
-    <string name="columbus_gesture_training_finished_title">Wszystko gotowe</string>
-    <string name="columbus_gesture_training_intro_text_accidental">Dwukrotne stuknięcie o tył Twojego urządzenia to nowy sposób na szybkie uruchomienie Asystenta. Możesz dostosować ten gest w ustawieniach.</string>
+    <string name="columbus_gesture_training_enrolling_title">Wypróbuj Szybkie Dotknięcie</string>
+    <string name="columbus_gesture_training_finished_text">Aby zmienić siłę naciśnięcia potrzebną do użycia Szybkiego Dotknięcia, przejdź do Ustawień.</string>
+    <string name="columbus_gesture_training_finished_title">Skonfigurowano Szybkie Dotknięcie</string>
+    <string name="columbus_gesture_training_intro_text_accidental">Dwukrotne stuknięcie w tył swojego urządzenia to nowy sposób na szybkie uruchomienie Asystenta. Możesz dostosować ten gest w ustawieniach.</string>
     <string name="columbus_gesture_training_intro_text_suw">Po dwóch stuknięciach możesz zrobić zrzut ekranu, pokazać powiadomienia lub zrobić coś innego.</string>
-    <string name="columbus_gesture_training_intro_title">Szybkie stuknięcie dla szybkich akcji</string>
+    <string name="columbus_gesture_training_intro_title">Szybkie Dotknięcie dla szybkich akcji</string>
     <string name="columbus_gesture_training_launch_no_selection_error">Proszę wybrać aplikację do otwarcia</string>
-    <string name="columbus_gesture_training_launch_text">Wybierz aplikację, którą chcesz otworzyć podczas używania Szybkiego stuknięcia.</string>
+    <string name="columbus_gesture_training_launch_text">Wybierz aplikację, którą chcesz otworzyć podczas używania Szybkiego Dotknięcia.</string>
     <string name="columbus_gesture_training_launch_title">Wybierz aplikację do otwarcia</string>
     <string name="columbus_launch_app_extra_widget_a11y_label">%1$s ustawienia skrótu</string>
-    <string name="columbus_launch_settings_activity_title">Ustawienia Szybkiego stuknięcia</string>
-    <string name="columbus_name">Szybkie stuknięcie</string>
+    <string name="columbus_launch_settings_activity_title">Ustawienia Szybkiego Dotknięcia</string>
+    <string name="columbus_name">Szybkie Dotknięcie</string>
     <string name="columbus_radio_button_extra_widget_a11y_label">%1$s ustawienia</string>
     <string name="columbus_setting_action_assistant_title">Uzyskaj dostęp do swojego cyfrowego asystenta</string>
     <string name="columbus_setting_action_launch_summary_no_selection">Nie wybrano aplikacji</string>
@@ -849,10 +849,10 @@
     <string name="columbus_setting_action_play_pause_title">Odtwórz/Zatrzymaj multimedia</string>
     <string name="columbus_setting_action_screenshot_title">Zrób zrzut ekranu</string>
     <string name="columbus_setting_actions_title">Stuknij dwukrotnie o tył telefonu, aby</string>
-    <string name="columbus_setting_additional_settings_title">Siła Szybkiego stuknięcia</string>
-    <string name="columbus_setting_app_selection_help_text">Wybierz aplikację, którą chcesz otworzyć, gdy dwukrotnie stukniesz o tył telefonu. Jeśli odinstalujesz aplikację, Szybkie stuknięcie wyłącza się, aż wybierzesz inną aplikację.</string>
-    <string name="columbus_setting_app_shortcut_selection_help_text">Wybierz, co się stanie, gdy otworzysz tę aplikację za pomocą Szybkiego stuknięcia.</string>
-    <string name="columbus_setting_enable_switch_title">Użyj Szybkiego stuknięcia</string>
+    <string name="columbus_setting_additional_settings_title">Siła Szybkiego Dotknięcia</string>
+    <string name="columbus_setting_app_selection_help_text">Wybierz aplikację, którą chcesz otworzyć, gdy dwukrotnie stukniesz o tył telefonu. Jeśli odinstalujesz aplikację, Szybkie Dotknięcie wyłącza się, aż wybierzesz inną aplikację.</string>
+    <string name="columbus_setting_app_shortcut_selection_help_text">Wybierz, co się stanie, gdy otworzysz tę aplikację za pomocą Szybkiego Dotknięcia.</string>
+    <string name="columbus_setting_enable_switch_title">Użyj Szybkiego Dotknięcia</string>
     <string name="columbus_setting_sensitivity_title">Wymagaj silniejszych stuknięć</string>
     <!-- Game -->
     <string name="game_dashboard_always_on_summary">Pokaż skrót Panelu Gry w grach</string>
@@ -1076,6 +1076,25 @@
     <string name="radio_info_title">Informacje o radiu</string>
     <!-- QS Header -->
     <string name="qs_header_image_title">Obraz nagłówka</string>
+    <string name="qs_header_image_summary">Wybierz obraz nagłówka szybkich ustawień</string>
+    <string name="qs_header_image_enabled_title">Dostosowanie obrazu nagłówka szybkich ustawień</string>
+    <string name="qs_header_image_enabled_summary">Włącz dostosowywanie obrazu nagłówka szybkich ustawień</string>
+    <string name="qs_header_image_landscape_enabled_title">Pokaż w trybie poziomym</string>
+    <string name="qs_header_image_landscape_enabled_summary">Wyświetlaj obraz nagłówka szybkich ustawień w trybie poziomym</string>
+    <string name="qs_header_image_tint_title">Odcień</string>
+    <string name="qs_header_image_tint_none">Brak odcienia</string>
+    <string name="qs_header_image_tint_accent">Odcień koloru</string>
+    <string name="qs_header_image_tint_primary">Kolor podstawowy</string>
+    <string name="qs_header_image_tint_primary_inverse">Odwrotny kolor podstawowy</string>
+    <string name="qs_header_image_tint_custom">Własny kolor</string>
+    <string name="qs_header_image_tint_custom_title">Własny kolor odcienia</string>
+    <string name="qs_header_image_height_portrait_title">Wysokość (pionowo)</string>
+    <string name="qs_header_image_height_landscape_title">Wysokość (poziomo)</string>
+    <string name="qs_header_image_alpha_title">Przezroczystość</string>
+    <string name="qs_header_image_padding_side_title">Boczny odstęp</string>
+    <string name="qs_header_image_padding_top_title">Górny odstęp</string>
+    <string name="file_header_select_title">Wybierz lokalny obraz</string>
+    <string name="file_header_select_summary">Wybierz obraz z pamięci</string>
     <!-- Lockscreen Clock -->
     <string name="kg_custom_clock_top_margin_title">Pozycja zegara z podwójną linią</string>
     <string name="kg_small_clock_text_size_title">Mały rozmiar zegara</string>
