--- a/res/values-ro-rRO/cr_strings.xml
+++ b/res/values-ro-rRO/cr_strings.xml
@@ -1073,6 +1073,25 @@
     <string name="radio_info_title">Informații radio</string>
     <!-- QS Header -->
     <string name="qs_header_image_title">Imagine antet</string>
+    <string name="qs_header_image_summary">Alege imaginea de fundal a setărilor rapide</string>
+    <string name="qs_header_image_enabled_title">Personalizare imagine antet setări rapide</string>
+    <string name="qs_header_image_enabled_summary">Activează personalizarea imaginii antetului setărilor rapide</string>
+    <string name="qs_header_image_landscape_enabled_title">Arată în modul peisaj</string>
+    <string name="qs_header_image_landscape_enabled_summary">Afișează imaginea antetului setări rapide în modul peisaj</string>
+    <string name="qs_header_image_tint_title">Nuanţă</string>
+    <string name="qs_header_image_tint_none">Fără nuanță</string>
+    <string name="qs_header_image_tint_accent">Nuanță culoare</string>
+    <string name="qs_header_image_tint_primary">Culoare primară</string>
+    <string name="qs_header_image_tint_primary_inverse">Culoarea primară inversă</string>
+    <string name="qs_header_image_tint_custom">Culoare personalizată</string>
+    <string name="qs_header_image_tint_custom_title">Culoare nuanță personalizată</string>
+    <string name="qs_header_image_height_portrait_title">Înălţime (portret)</string>
+    <string name="qs_header_image_height_landscape_title">Înălțime (peisaj)</string>
+    <string name="qs_header_image_alpha_title">Opacitate</string>
+    <string name="qs_header_image_padding_side_title">Umplere laterală</string>
+    <string name="qs_header_image_padding_top_title">Umplere de sus</string>
+    <string name="file_header_select_title">Selectează imaginea locală</string>
+    <string name="file_header_select_summary">Selectaţi imaginea din memoria de stocare</string>
     <!-- Lockscreen Clock -->
     <string name="kg_custom_clock_top_margin_title">Poziție ceas cu linie dublă</string>
     <string name="kg_small_clock_text_size_title">Mărime mică a ceasului</string>
@@ -1086,5 +1105,4 @@
     <string name="qs_dual_tone_title">Ton dublu tematic</string>
     <string name="qs_dual_tone_summary">Folosește culori de fundal pentru tonuri duble în locul unui singur ton AOSP</string>
     <!-- Label for a numbered SIM card.  [CHAR LIMIT=40] -->
-    <string name="sim_card_number_title">SIM <xliff:g id="card_number">%1$d</xliff:g></string>
 </resources>
