--- a/res/values-zh-rTW/cr_strings.xml
+++ b/res/values-zh-rTW/cr_strings.xml
@@ -920,8 +920,8 @@
     <string name="qs_tile_layout_summary">在圖示下方顯示標題</string>
     <string name="qs_columns_portrait_title">列（垂直）</string>
     <string name="qs_columns_landscape_title">列（橫向）</string>
-    <string name="qqs_rows_portrait_title">Quick QS Rows (portrait)</string>
-    <string name="qqs_rows_landscape_title">Quick QS Rows (landscape)</string>
+    <string name="qqs_rows_portrait_title">快速快速設定行數 (縱向)</string>
+    <string name="qqs_rows_landscape_title">快速快速設定行數 (橫向)</string>
     <!-- Statusbar Clock background chip -->
     <string name="statusbar_clock_chip_title">時鐘背景</string>
     <string name="statusbar_clock_chip_summary">在時鐘後方顯示背景</string>
@@ -1067,6 +1067,25 @@
     <string name="radio_info_title">手機資訊</string>
     <!-- QS Header -->
     <string name="qs_header_image_title">頂部背景圖片</string>
+    <string name="qs_header_image_summary">選擇快速設定頂部標題圖片</string>
+    <string name="qs_header_image_enabled_title">快速設定頂部圖片定制</string>
+    <string name="qs_header_image_enabled_summary">啟用快速設定頂部圖片定制</string>
+    <string name="qs_header_image_landscape_enabled_title">橫向顯示</string>
+    <string name="qs_header_image_landscape_enabled_summary">以橫向模式顯示快速設定頂部圖片</string>
+    <string name="qs_header_image_tint_title">有色彩</string>
+    <string name="qs_header_image_tint_none">無色彩</string>
+    <string name="qs_header_image_tint_accent">主題顏色</string>
+    <string name="qs_header_image_tint_primary">主要顏色</string>
+    <string name="qs_header_image_tint_primary_inverse">主要顏色反轉</string>
+    <string name="qs_header_image_tint_custom">自訂顏色</string>
+    <string name="qs_header_image_tint_custom_title">自訂色調顏色</string>
+    <string name="qs_header_image_height_portrait_title">高度 (縱向)</string>
+    <string name="qs_header_image_height_landscape_title">高度 (橫向)</string>
+    <string name="qs_header_image_alpha_title">不透明度</string>
+    <string name="qs_header_image_padding_side_title">側邊填充</string>
+    <string name="qs_header_image_padding_top_title">頂部填充</string>
+    <string name="file_header_select_title">選擇本地圖像</string>
+    <string name="file_header_select_summary">從裝置中選擇圖像</string>
     <!-- Lockscreen Clock -->
     <string name="kg_custom_clock_top_margin_title">時鐘位置</string>
     <string name="kg_small_clock_text_size_title">小型時鐘字體大小</string>
